// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordIndicator renders correctly for strong variant 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="PasswordIndicator/PasswordIndicator.tsx:31"
  data-style-src="react-strict-dom:web/runtime.js"
  data-testid="password-indicator-strong"
  style={{}}
>
  <div
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:32"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      color="var(--colorPrimary-xvq57q1)"
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={12}
      vbWidth={12}
      width={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="m8.983 3.353-.706-.705-3.17 3.17.705.705zm2.12-.705-5.29 5.29-2.09-2.085-.705.705 2.795 2.795 6-6zM.188 6.558l2.794 2.795.705-.705-2.79-2.795z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </div>
  <span
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:35"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    Strong
  </span>
</div>
`;

exports[`PasswordIndicator renders correctly for vulnerable variant 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="PasswordIndicator/PasswordIndicator.tsx:31"
  data-style-src="react-strict-dom:web/runtime.js"
  data-testid="password-indicator-vulnerable"
  style={{}}
>
  <div
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:32"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      color="var(--colorSurfaceDestructiveElevated-xfzjd1d)"
      fill="none"
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={12}
      vbWidth={12}
      width={24}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M6 1 2 2.5v3.045C2 8.07 3.705 10.425 6 11c2.295-.575 4-2.93 4-5.455V2.5zm3 4.545c0 2-1.275 3.85-3 4.415-1.725-.565-3-2.41-3-4.415v-2.35L6 2.07l3 1.125zM4.955 4.25l-.705.705L5.295 6 4.25 7.045l.705.705L6 6.71l1.045 1.04.705-.705L6.71 6l1.04-1.045-.705-.705L6 5.295z"
          fill={
            {
              "type": 2,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </div>
  <span
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="PasswordIndicator/PasswordIndicator.tsx:35"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    Vulnerable
  </span>
</div>
`;
